--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ log = "0.4"
 prost = "0.11"
 prost-types = "0.11"
 pyo3 = { version = "~0.17.3", features = ["extension-module", "abi3", "abi3-py37"] }
-tempfile = "3"
 tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+uuid = "1.2"
 
 [build-dependencies]
 rustc_version = "0.4.0"
