--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "raysql"
 description = "RaySQL: DataFusion on Ray"
-homepage = "https://github.com/andygrove/ray-sql"
-repository = "https://github.com/andygrove/ray-sql"
+homepage = "https://github.com/datafusion-contrib/ray-sql"
+repository = "https://github.com/datafusion-contrib/ray-sql"
 authors = ["Andy Grove <andygrove73@gmail.com>"]
 version = "0.5.0"
 edition = "2021"
