--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ name = "raysql"
 description = "RaySQL: DataFusion on Ray"
 homepage = "https://github.com/datafusion-contrib/ray-sql"
 repository = "https://github.com/datafusion-contrib/ray-sql"
-authors = ["Andy Grove <andygrove73@gmail.com>"]
-version = "0.5.0"
+authors = ["Andy Grove <andygrove73@gmail.com>", "Frank Luan <lsf@berkeley.edu>"]
+version = "0.6.0"
 edition = "2021"
 readme = "README.md"
 license = "Apache-2.0"
