--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,6 +26,7 @@ jobs:
         unzip $PROTO_ZIP
         export PATH=$PATH:$HOME/d/protoc/bin
         protoc --version    - name: Build
+    - name: Build Rust code
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
