--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,25 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install protobuf compiler
       shell: bash
-      run: |
-        mkdir -p $HOME/d/protoc
-        cd $HOME/d/protoc
-        export PROTO_ZIP="protoc-21.4-linux-x86_64.zip"
-        curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v21.4/$PROTO_ZIP
-        unzip $PROTO_ZIP
-        chmod +x $HOME/d/protoc/bin/protoc
-        export PROTOC=$HOME/d/protoc/bin
-        export PATH=$PATH:$PROTOC
-        protoc --version
+      run: sudo apt-get install protobuf-compiler
     - name: Build Rust code
-      run: |
-        export PROTOC=$HOME/d/protoc/bin
-        export PATH=$PATH:$PROTOC
-        protoc --version
-        cargo build --verbose
+      run: cargo build --verbose
     - name: Run tests
-      run: |
-        export PROTOC=$HOME/d/protoc/bin
-        export PATH=$PATH:$PROTOC
-        protoc --version
-        cargo test --verbose
+      run: cargo test --verbose
