--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -1,11 +1,11 @@
 black
 flake8
 isort
-maturin[patchelf]
+maturin
 mypy
 numpy
 pyarrow
 pytest
-ray==2.3.0
+ray==2.37.0
 toml
 importlib_metadata; python_version < "3.8"
