--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,24 +2,36 @@ name: Rust
 
 on:
   push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
+  PYTHON_VERSION: 3.9
+  TPCH_SAMPLING_RATE: "1" # (1/100)
+  TPCH_TEST_PARTITIONS: "2"
+  TPCH_DATA_PATH: "data"
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Install protobuf compiler
-      shell: bash
-      run: sudo apt-get install protobuf-compiler
-    - name: Build Rust code
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+      - uses: actions/checkout@v3
+      - name: Install protobuf compiler
+        shell: bash
+        run: sudo apt-get install protobuf-compiler
+      - name: Build Rust code
+        run: cargo build --verbose
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r tpch/requirements.txt
+      - name: Generate test data
+        run: |
+          ./scripts/gen-test-data.sh
+      - name: Run tests
+        run: cargo test --verbose
