--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,8 +7,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
   PYTHON_VERSION: 3.9
-  TPCH_SAMPLING_RATE: "1" # (1/100)
-  TPCH_TEST_PARTITIONS: "1"
+  TPCH_SAMPLING_RATE: "0.1"
+  TPCH_TEST_PARTITIONS: "2"
   TPCH_DATA_PATH: "data"
 
 jobs:
