--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,11 @@ uuid = "1.2"
 rustc_version = "0.4.0"
 tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }
 
+[dev-dependencies]
+anyhow = "1.0.89"
+pretty_assertions = "1.4.0"
+regex = "1.11.0"
+
 [lib]
 name = "datafusion_ray"
 crate-type = ["cdylib", "rlib"]
