--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -26,8 +26,8 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6
         with:
           context: .
-          push: true
+          file: ./k8s/Dockerfile
           tags: username/repository:tag
