--- a/k8s/Dockerfile.aarch64
+++ b/k8s/Dockerfile.aarch64
@@ -1,4 +1,4 @@
-FROM rayproject/ray:2.37.0.cabc24-py312
+FROM rayproject/ray:2.37.0-py311-aarch64
 
 USER ray
 
@@ -20,6 +20,6 @@ RUN sudo chown -R ray:users /home/ray/datafusion_ray && \
 
 # Copy built wheel to target container
 
-FROM rayproject/ray:2.37.0.cabc24-py312
+FROM rayproject/ray:2.37.0-py311-aarch64
 COPY --from=0 /home/ray/datafusion_ray/target/wheels/*.whl /home/ray/
 RUN pip3 install /home/ray/*.whl
