--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,12 +25,13 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "Apache-2.0"
-rust-version = "1.62"
+rust-version = "1.70"
 build = "build.rs"
 
 [dependencies]
 datafusion = { version = "42.0.0", features = ["pyarrow", "avro"] }
 datafusion-proto = "42.0.0"
+datafusion-python = "42.0.0"
 futures = "0.3"
 glob = "0.3.1"
 log = "0.4"
@@ -38,6 +39,7 @@ prost = "0.13"
 pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38"] }
 tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync"] }
 uuid = "1.11.0"
+async-trait = "0.1.83"
 
 [build-dependencies]
 prost-types = "0.13"
