--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,6 +46,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r tpch/requirements.txt
+          pip install -r requirements-in.txt
       - name: Generate test data
         run: |
           ./scripts/gen-test-data.sh
