--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,11 +46,15 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r tpch/requirements.txt
-          pip install -r requirements-in.txt
       - name: Generate test data
         run: |
           ./scripts/gen-test-data.sh
       - name: Run Rust tests
         run: cargo test --verbose
       - name: Run Python tests
-        run: python -m pytest
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements-in.txt
+          maturin develop
+          python -m pytest
