--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,20 +29,35 @@ rust-version = "1.62"
 build = "build.rs"
 
 [dependencies]
+arrow = { version = "53", features = ["pyarrow", "ipc"] }
+async-stream = "0.3"
 datafusion = { version = "43.0", features = ["pyarrow", "avro"] }
+datafusion-python = { version = "43.0" }
 datafusion-proto = "43.0"
 futures = "0.3"
 glob = "0.3.1"
 log = "0.4"
 prost = "0.13"
-pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38"] }
-tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+pyo3 = { version = "0.22", features = [
+  "extension-module",
+  "abi3",
+  "abi3-py38",
+] }
+tokio = { version = "1.40", features = [
+  "macros",
+  "rt",
+  "rt-multi-thread",
+  "sync",
+] }
 uuid = "1.11.0"
 
 [build-dependencies]
 prost-types = "0.13"
 rustc_version = "0.4.0"
-tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }
+tonic-build = { version = "0.8", default-features = false, features = [
+  "transport",
+  "prost",
+] }
 
 [dev-dependencies]
 anyhow = "1.0.89"
