round trip to python and back working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ pyo3 = { version = "0.22", features = [
   "abi3",
   "abi3-py38",
 ] }
+pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
 tokio = { version = "1.40", features = [
   "macros",
   "rt",
