--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ anyhow = "1"
 arrow = { version = "53.3", features = ["pyarrow", "ipc"] }
 arrow-flight = "53.3"
 async-stream = "0.3"
+async-channel = "2.3"
 datafusion = { version = "43.0", features = ["pyarrow", "avro"] }
 datafusion-python = { version = "43.1" }
 datafusion-proto = "43.0"
@@ -45,6 +46,7 @@ object_store = { version = "0.11.0", features = [
   "azure",
   "http",
 ] }
+parking_lot = "0.12"
 prost = "0.13"
 pyo3 = { version = "0.22.6", features = [
   "extension-module",
