--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ datafusion-python = { version = "43.1" }
 datafusion-proto = "43.0"
 futures = "0.3"
 glob = "0.3.1"
+local-ip-address = "0.6"
 log = "0.4"
 object_store = { version = "0.11.0", features = [
   "aws",
