--- a/requirements-in.txt
+++ b/requirements-in.txt
@@ -7,6 +7,9 @@ numpy
 pyarrow>=18.0.0
 pytest
 ray==2.40.0
-datafusion>=43.0.0
+datafusion==43.0.0
+duckdb
+numpy
+pandas
 toml
 importlib_metadata; python_version < "3.8"
