--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ arrow = { version = "53.3", features = ["pyarrow", "ipc"] }
 arrow-flight = "53.3"
 async-stream = "0.3"
 async-channel = "2.3"
+bytesize = "1.3"
 datafusion = { version = "43.0", features = ["pyarrow", "avro"] }
 datafusion-python = { version = "43.1" }
 datafusion-proto = "43.0"
