--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "Apache-2.0"
-rust-version = "1.70"
+rust-version = "1.76"
 build = "build.rs"
 
 [dependencies]
@@ -96,11 +96,11 @@ crate-type = ["cdylib", "rlib"]
 name = "datafusion_ray._datafusion_ray_internal"
 
 [profile.release]
+lto = "thin"
+
 codegen-units = 1
 opt-level = 3
 debug = 0
-lto = true
-
 [profile.dev]
 opt-level = 1
 [profile.dev.package."*"]
