--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,9 +84,9 @@ tonic-build = { version = "0.8", default-features = false, features = [
 url = "2"
 
 [dev-dependencies]
-anyhow = "1.0.89"
-pretty_assertions = "1.4.0"
-regex = "1.11.0"
+#anyhow = "1.0.89"
+#pretty_assertions = "1.4.0"
+#regex = "1.11.0"
 
 [lib]
 name = "datafusion_ray"
@@ -97,11 +97,12 @@ name = "datafusion_ray._datafusion_ray_internal"
 
 [profile.release]
 lto = "thin"
-
 codegen-units = 1
 opt-level = 3
 debug = 0
+
 [profile.dev]
 opt-level = 1
+
 [profile.dev.package."*"]
 opt-level = 3
