--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ bytesize = "1.3"
 datafusion = { version = "43.0", features = ["pyarrow", "avro"] }
 datafusion-python = { version = "43.1" }
 datafusion-proto = "43.0"
+env_logger = "0.11"
 futures = "0.3"
 glob = "0.3.1"
 local-ip-address = "0.6"
@@ -56,6 +57,7 @@ pyo3 = { version = "0.22.6", features = [
   "abi3-py38",
 ] }
 pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
+pyo3-pylogger = "0.3.0"
 rust_decimal = "1.36"
 tokio = { version = "1.40", features = [
   "macros",
@@ -83,11 +85,6 @@ tonic-build = { version = "0.8", default-features = false, features = [
 ] }
 url = "2"
 
-[dev-dependencies]
-#anyhow = "1.0.89"
-#pretty_assertions = "1.4.0"
-#regex = "1.11.0"
-
 [lib]
 name = "datafusion_ray"
 crate-type = ["cdylib", "rlib"]
@@ -105,4 +102,4 @@ debug = 0
 opt-level = 1
 
 [profile.dev.package."*"]
-opt-level = 3
+opt-level = 1
