--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,29 +25,66 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "Apache-2.0"
-rust-version = "1.62"
+rust-version = "1.76"
 build = "build.rs"
 
 [dependencies]
+anyhow = "1"
+arrow = { version = "53.3", features = ["pyarrow", "ipc"] }
+arrow-flight = "53.3"
+async-stream = "0.3"
+async-channel = "2.3"
+bytesize = "1.3"
 datafusion = { version = "43.0", features = ["pyarrow", "avro"] }
+datafusion-python = { version = "43.1" }
 datafusion-proto = "43.0"
+env_logger = "0.11"
 futures = "0.3"
 glob = "0.3.1"
+itertools = "0.14"
+local-ip-address = "0.6"
 log = "0.4"
+object_store = { version = "0.11.0", features = [
+  "aws",
+  "gcp",
+  "azure",
+  "http",
+] }
+parking_lot = { version = "0.12", features = ["deadlock_detection"] }
 prost = "0.13"
-pyo3 = { version = "0.22", features = ["extension-module", "abi3", "abi3-py38"] }
-tokio = { version = "1.40", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+pyo3 = { version = "0.22.6", features = [
+  "extension-module",
+  "abi3",
+  "abi3-py38",
+] }
+pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
+pyo3-pylogger = "0.3.0"
+rust_decimal = "1.36"
+tokio = { version = "1.40", features = [
+  "macros",
+  "rt",
+  "rt-multi-thread",
+  "sync",
+  "time",
+] }
+tokio-stream = "0.1"
+
+tonic = { version = "0.12.3", default-features = false, features = [
+  "transport",
+  "codegen",
+  "prost",
+] }
 uuid = "1.11.0"
+url = "2"
 
 [build-dependencies]
 prost-types = "0.13"
 rustc_version = "0.4.0"
-tonic-build = { version = "0.8", default-features = false, features = ["transport", "prost"] }
-
-[dev-dependencies]
-anyhow = "1.0.89"
-pretty_assertions = "1.4.0"
-regex = "1.11.0"
+tonic-build = { version = "0.8", default-features = false, features = [
+  "transport",
+  "prost",
+] }
+url = "2"
 
 [lib]
 name = "datafusion_ray"
@@ -57,5 +94,13 @@ crate-type = ["cdylib", "rlib"]
 name = "datafusion_ray._datafusion_ray_internal"
 
 [profile.release]
+lto = "thin"
 codegen-units = 1
-lto = true
+opt-level = 3
+debug = 0
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 1
