disable k8s CI checks

--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -17,8 +17,9 @@
 name: Kubernetes
 
 on:
-  push:
-  pull_request:
+#  push:
+#  pull_request:
+  workflow_dispatch:
 
 env:
   RAY_HELM_VERSION: 1.1.0
