--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -46,9 +46,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r tpch/requirements.txt
-      - name: Generate test data
-        run: |
-          ./scripts/gen-test-data.sh
+#      - name: Generate test data
+#        run: |
+#          ./scripts/gen-test-data.sh
       - name: Run Rust tests
         run: cargo test --verbose
       - name: Run Python tests
