disable python tests

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,10 +51,10 @@ jobs:
 #          ./scripts/gen-test-data.sh
       - name: Run Rust tests
         run: cargo test --verbose
-      - name: Run Python tests
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-          pip install -r requirements-in.txt
-          maturin develop
-          python -m pytest
+#      - name: Run Python tests
+#        run: |
+#          python -m venv venv
+#          source venv/bin/activate
+#          pip install -r requirements-in.txt
+#          maturin develop
+#          python -m pytest
