--- a/tpch/requirements.txt
+++ b/tpch/requirements.txt
@@ -1,4 +1,3 @@
-# This is a bad idea, we should lock dependencies with poetry and consume this tool as an action
-pyarrow
-datafusion
-argparse
+duckdb
+ray[default]
+maturin
