--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,15 +37,15 @@ jobs:
       matrix:
         runner:
           - ubuntu-24.04
-          #- ubuntu-24.04-arm
+          - ubuntu-24.04-arm
         python-version:
-          #- "3.10"
-          #- "3.11"
+          - "3.10"
+          - "3.11"
           - "3.12"
         ray-version:
-          #- "2.40"
-          #- "2.41"
-          #- "2.42.1"
+          - "2.40"
+          - "2.41"
+          - "2.42.1"
           - "2.43"
 
     steps:
