--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@
 # specific language governing permissions and limitations
 # under the License.
 
-name: main
+name: Python Tests
 on:
   push:
     branches: [main]
@@ -37,27 +37,32 @@ jobs:
       fail-fast: true
       matrix:
         platform:
-          - image: ubuntu-24.04
-            target: x86_64-unknown-linux-musl
+          #- image: ubuntu-24.04
+          #  target: x86_64-unknown-linux-musl
           - image: ubuntu-24.04-arm
             target: aarch64-unknown-linux-musl
         python-version:
-          - "3.10"
-          - "3.11"
+          #- "3.10"
+          #- "3.11"
           - "3.12"
         ray-version:
-          - "2.40"
-          - "2.41"
-          - "2.42.1"
+          #- "2.40"
+          #- "2.41"
+          #- "2.42.1"
           - "2.43"
     steps:
       - uses: actions/checkout@v4
 
       - name: Setup Rust Toolchain
         uses: dtolnay/rust-toolchain@stable
-        id: rust-toolchain-arm
+        id: rust-toolchain
         with:
           target: ${{ matrix.platform.target }}
+
+      - name: Check Rust output
+        id: rust-toolchain-out
+        run: |
+          rustc --version --verbose
 
       - name: Install Protoc
         uses: arduino/setup-protoc@v3
