--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,17 +34,17 @@ jobs:
   validate-tpch:
     runs-on: ${{ matrix.platform.image }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         platform:
-          #- image: ubuntu-24.04
-          #  target: x86_64-unknown-linux-musl
+          - image: ubuntu-24.04
+            target: x86_64-unknown-linux-musl
           - image: ubuntu-24.04-arm
             target: aarch64-unknown-linux-musl
         python-version:
           #- "3.10"
-          #- "3.11"
-          - "3.12"
+          - "3.11"
+          #- "3.12"
         ray-version:
           #- "2.40"
           #- "2.41"
@@ -85,6 +85,7 @@ jobs:
 
       - name: initial project sync
         run: |
+          cargo --version
           uv sync --no-install-package datafusion-ray --no-install-package ray
 
       # reset the version of ray in pyproject.toml
